[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/Player2.png" type="Texture" id=1]
[ext_resource path="res://assets/Player1.png" type="Texture" id=2]
[ext_resource path="res://script/RightSpawner.gd" type="Script" id=3]
[ext_resource path="res://script/LeftSpawner.gd" type="Script" id=4]
[ext_resource path="res://font/PixelOperator-Bold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://script/Player.gd" type="Script" id=6]
[ext_resource path="res://script/Main.gd" type="Script" id=7]
[ext_resource path="res://sound/get_coin.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/arrowRight.png" type="Texture" id=9]
[ext_resource path="res://assets/arrowLeft.png" type="Texture" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 12 )

[sub_resource type="DynamicFont" id=3]
size = 22
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 56
font_data = ExtResource( 5 )

[node name="Main" type="Node2D"]
script = ExtResource( 7 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 360.0
margin_bottom = 800.0
color = Color( 0.137255, 0.796078, 0.886275, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 182, 600 )
collision_mask = 14
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}
speed = 250

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 1 )

[node name="Player1" type="Sprite" parent="Player"]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="Player2" type="Sprite" parent="Player"]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )

[node name="RightSpawner" type="Node2D" parent="."]
position = Vector2( 180, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Timer" type="Timer" parent="RightSpawner"]
script = ExtResource( 3 )

[node name="LefttSpawner" type="Node2D" parent="."]
position = Vector2( 180, -200 )
__meta__ = {
"_edit_lock_": true
}

[node name="Timer" type="Timer" parent="LefttSpawner"]
script = ExtResource( 4 )

[node name="UI" type="Node2D" parent="."]

[node name="ButtonGameOver" type="Button" parent="UI"]
pause_mode = 2
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 80.0
margin_top = 200.0
margin_right = 280.0
margin_bottom = 700.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Label" parent="UI/ButtonGameOver"]
pause_mode = 2
margin_left = 35.0
margin_top = 150.0
margin_right = 175.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 3 )
text = "Game Over!
Tap to restart"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonPlay" type="Button" parent="UI"]
pause_mode = 2
visible = false
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 80.0
margin_top = 200.0
margin_right = 280.0
margin_bottom = 700.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Label" parent="UI/ButtonPlay"]
pause_mode = 2
margin_left = 35.0
margin_top = 150.0
margin_right = 175.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 3 )
text = "Tap to Play"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Control" parent="UI"]
margin_top = 20.0
margin_right = 40.0
margin_bottom = 60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="UI/Text"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 105.0
margin_top = 10.0
margin_right = 174.0
margin_bottom = 99.0
custom_fonts/font = SubResource( 2 )
text = "00"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BestScore" type="Label" parent="UI/Text"]
margin_left = 20.0
margin_top = 20.0
margin_right = 118.0
margin_bottom = 69.0
custom_fonts/font = SubResource( 3 )
text = "Best Score
00"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LastScore" type="Label" parent="UI/Text"]
margin_left = 240.0
margin_top = 20.0
margin_right = 342.0
margin_bottom = 69.0
custom_fonts/font = SubResource( 3 )
text = "Last Score 
00"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="UI"]
margin_top = 150.0
margin_right = 40.0
margin_bottom = 190.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Kanan" type="TouchScreenButton" parent="UI/Control"]
position = Vector2( 290, 450 )
normal = ExtResource( 9 )

[node name="Kiri" type="TouchScreenButton" parent="UI/Control"]
position = Vector2( 20, 450 )
normal = ExtResource( 10 )

[node name="CoinSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = 24.0

[connection signal="button_down" from="UI/ButtonGameOver" to="." method="_on_ButtonGameOver_button_down"]
[connection signal="button_down" from="UI/ButtonPlay" to="." method="_on_ButtonPlay_button_down"]
[connection signal="pressed" from="UI/Control/Kanan" to="Player" method="_on_Kanan_pressed"]
[connection signal="pressed" from="UI/Control/Kiri" to="Player" method="_on_Kiri_pressed"]
